--- a/etc/fail2ban.template.conf
+++ b/etc/fail2ban.template.conf
@@ -29,6 +29,15 @@ port    = ssh
 logpath = %(sshd_log)s
 backend = %(sshd_backend)s
 
+# OpenVPN server
+[openvpn]
+enabled  = true
+port     = 1194
+protocol = udp
+filter   = openvpn
+logpath  = /var/log/openvpn.log
+maxretry = 3
+
 # nginx HTTP server
 [nginx-http-auth]
 enabled = true
