disable http and enable custom ssh

--- a/etc/fail2ban.template.conf
+++ b/etc/fail2ban.template.conf
@@ -25,7 +25,7 @@ filter = %(__name__)s[mode=%(mode)s]
 # SSH server
 [sshd]
 enabled = true
-port    = ssh
+port    = ${ssh_port}
 logpath = %(sshd_log)s
 backend = %(sshd_backend)s
 
@@ -39,19 +39,19 @@ logpath  = /var/log/openvpn.log
 maxretry = 3
 
 # nginx HTTP server
-[nginx-http-auth]
-enabled = true
-port    = http,https
-logpath = %(nginx_error_log)s
+# [nginx-http-auth]
+# enabled = true
+# port    = http,https
+# logpath = %(nginx_error_log)s
 
-[nginx-limit-req]
-enabled = true
-port    = http,https
-logpath = %(nginx_error_log)s
+# [nginx-limit-req]
+# enabled = true
+# port    = http,https
+# logpath = %(nginx_error_log)s
 
-[nginx-botsearch]
-enabled  = true
-port     = http,https
-logpath  = %(nginx_error_log)s
-maxretry = 2
+# [nginx-botsearch]
+# enabled  = true
+# port     = http,https
+# logpath  = %(nginx_error_log)s
+# maxretry = 2
 # --- EOF --------------------------------------------------------------------
