enable fail2ban nginx

--- a/etc/fail2ban.template.conf
+++ b/etc/fail2ban.template.conf
@@ -39,19 +39,19 @@ logpath  = /var/log/openvpn.log
 maxretry = 3
 
 # nginx HTTP server
-# [nginx-http-auth]
-# enabled = true
-# port    = http,https
-# logpath = %(nginx_error_log)s
+[nginx-http-auth]
+enabled = true
+port    = http,https
+logpath = /home/avocado/guacamole/data/nginx/error.log
 
-# [nginx-limit-req]
-# enabled = true
-# port    = http,https
-# logpath = %(nginx_error_log)s
+[nginx-limit-req]
+enabled = true
+port    = http,https
+logpath = /home/avocado/guacamole/data/nginx/error.log
 
-# [nginx-botsearch]
-# enabled  = true
-# port     = http,https
-# logpath  = %(nginx_error_log)s
-# maxretry = 2
+[nginx-botsearch]
+enabled  = true
+port     = http,https
+logpath = /home/avocado/guacamole/data/nginx/error.log
+maxretry = 2
 # --- EOF --------------------------------------------------------------------
