--- a/etc/fail2ban.template.conf
+++ b/etc/fail2ban.template.conf
@@ -5,7 +5,7 @@
 # Name.......: jail.local
 # Author.....: Stefan Oehrli (oes) stefan.oehrli@trivadis.com
 # Editor.....: Stefan Oehrli
-# Date.......: 2020.04.28
+# Date.......: 2023.03.09
 # Notes......: fail2ban local configuration taken from /etc/fail2ban/jail.conf 
 # Reference..: --
 # ---------------------------------------------------------------------------
@@ -32,7 +32,7 @@ backend = %(sshd_backend)s
 # OpenVPN server
 [openvpn]
 enabled  = true
-port     = 1194
+port     = ${vpn_port}
 protocol = udp
 filter   = openvpn
 logpath  = /var/log/openvpn.log
