--- a/etc/fail2ban.template.conf
+++ b/etc/fail2ban.template.conf
@@ -3,7 +3,7 @@
 # Saegereistrasse 29, 8152 Glattbrugg, Switzerland
 # ---------------------------------------------------------------------------
 # Name.......: jail.local
-# Author.....: Stefan Oehrli (oes) stefan.oehrli@trivadis.com
+# Author.....: Stefan Oehrli (oes) stefan.oehrli@accenture.com
 # Editor.....: Stefan Oehrli
 # Date.......: 2023.03.09
 # Notes......: fail2ban local configuration taken from /etc/fail2ban/jail.conf 
