--- a/cloudinit/bastion_host.yaml
+++ b/cloudinit/bastion_host.yaml
@@ -4,7 +4,7 @@
 # Saegereistrasse 29, 8152 Glattbrugg, Switzerland
 # ----------------------------------------------------------------------------
 # Name.......: bastion_host.yaml 
-# Author.....: Stefan Oehrli (oes) stefan.oehrli@trivadis.com
+# Author.....: Stefan Oehrli (oes) stefan.oehrli@accenture.com
 # Editor.....: Stefan Oehrli
 # Date.......: 2023.03.09
 # Revision...: 
