--- a/examples/terraform.tfvars.example
+++ b/examples/terraform.tfvars.example
@@ -3,7 +3,7 @@
 # Saegereistrasse 29, 8152 Glattbrugg, Switzerland
 # ---------------------------------------------------------------------------
 # Name.......: terraform.tfvars.example
-# Author.....: Stefan Oehrli (oes) stefan.oehrli@trivadis.com
+# Author.....: Stefan Oehrli (oes) stefan.oehrli@accenture.com
 # Editor.....: Stefan Oehrli
 # Date.......: 2023.03.09
 # Revision...: 
@@ -35,7 +35,7 @@ bastion_dns_registration        = false
 bastion_name                    = "bastion"
 bastion_image_id                = "OEL"
 bastion_os_version              = "7.9"
-bastion_shape                   = "VM.Standard.E3.Flex"
+bastion_shape                   = "VM.Standard.E4.Flex"
 bastion_boot_volume_size        = 50
 bastion_ocpus                   = 1
 bastion_memory_in_gbs           = 8
