--- a/cloudinit/bastion_host_ol7.yaml
+++ b/cloudinit/bastion_host_ol7.yaml
@@ -22,7 +22,9 @@ packages:                       # install additional packages
 
 # --- Add / Update YUM Repositories ------------------------------------------
 yum_repos:
-  baseurl: https://download.docker.com/linux/centos/docker-ce.repo
+  docker-ce:
+    baseurl: https://download.docker.com/linux/centos/docker-ce.repo
+    name: : Docker CE
 # --- EOF Add / Update YUM Repositories --------------------------------------
 
 # --- Create users -----------------------------------------------------------
@@ -97,7 +99,7 @@ runcmd:
 
 # configure tools from development repositories
   - yum-config-manager --enable ol7_developer --enable ol7_developer_EPEL
-  - yum install -y mosh tmux pwgen fail2ban ocker-ce --nobest
+  - yum install -y mosh tmux pwgen fail2ban docker-ce --nobest
 
 # configure automatic download / updates
   - yum install -y yum-cron
