remove docker-compose autocompletion

--- a/cloudinit/bastion_host_ol7.yaml
+++ b/cloudinit/bastion_host_ol7.yaml
@@ -111,6 +111,7 @@ runcmd:
 # install and configure docker
   - systemctl enable docker.service
   - systemctl start docker.service
+  - rm -f /etc/bash_completion.d/docker-compose
 
 # configure fail2ban service
   - systemctl enable fail2ban
