--- a/cloudinit/bastion_host_ol7.yaml
+++ b/cloudinit/bastion_host_ol7.yaml
@@ -11,6 +11,8 @@
 # Purpose....: cloud-init configuration file for bastion hosts
 # Notes......: --
 # Reference..: --
+# License....: Apache License Version 2.0, January 2004 as shown
+#              at http://www.apache.org/licenses/
 # ------------------------------------------------------------------------------
 # Capture all subprocess output into a logfile
 output: {all: '| tee -a /var/log/cloud-init-output.log'}
@@ -71,7 +73,7 @@ write_files:
     content: |
       ${authorized_keys}
 
-# Append /etc/hosts with custom hosts entries --------------------------------
+# Append /etc/hosts with custom hosts entries ----------------------------------
   - path: /etc/hosts
     append: true
     encoding: "gzip+base64"
@@ -81,7 +83,7 @@ write_files:
 
 # --- Run configuration commands -----------------------------------------------
 runcmd:
-# Configure firewalld for SSH, guacamole (HTTP/HTTPS) and MOSH
+# Configure firewalld for SSH, guacamole (HTTP/HTTPS)
   - firewall-offline-cmd --add-service=http
   - firewall-offline-cmd --add-service=https 
   - firewall-offline-cmd --add-service=openvpn
@@ -96,7 +98,7 @@ runcmd:
 # configure tools from development repositories
   - yum-config-manager --enable ol7_developer --enable ol7_developer_EPEL
   - yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
-  - yum install -y mosh tmux pwgen fail2ban docker-ce
+  - yum install -y pwgen fail2ban docker-ce
 
 # configure automatic download / updates
   - yum install -y yum-cron
@@ -108,7 +110,7 @@ runcmd:
 # install and configure docker
   - systemctl enable docker.service
   - systemctl start docker.service
-  - rm -f /etc/bash_completion.d/docker-compose
+  - rm -vf /etc/bash_completion.d/docker-compose
 
 # configure fail2ban service
   - systemctl enable fail2ban
