tvd_domain to lab_domain

--- a/examples/terraform.tfvars.example
+++ b/examples/terraform.tfvars.example
@@ -60,5 +60,5 @@ staging                         = 1
 
 # Trivadis LAB specific parameter -------------------------------------------
 tvd_participants                = 1
-tvd_domain                      = "trivadislabs.com"
+lab_domain                      = "trivadislabs.com"
 # --- EOF -------------------------------------------------------------------
