--- a/examples/terraform.tfvars.example
+++ b/examples/terraform.tfvars.example
@@ -59,6 +59,6 @@ guacamole_connections           = ""
 staging                         = 1
 
 # Trivadis LAB specific parameter -------------------------------------------
-tvd_participants                = 1
+numberOf_labs                   = 1
 lab_domain                      = "trivadislabs.com"
 # --- EOF -------------------------------------------------------------------
