--- a/cloudinit/bastion_host_ol7.yaml
+++ b/cloudinit/bastion_host_ol7.yaml
@@ -18,7 +18,7 @@
 output: {all: '| tee -a /var/log/cloud-init-output.log'}
 
 # --- Install/upgrade yum packages ---------------------------------------------
-package_upgrade: ${yum_upgrade} # Enable yum update
+package_upgrade: true           # Enable yum update
 packages:                       # install additional packages
   - git                         # Fast Version Control System
   - tmux                        # A terminal multiplexer
